# SFML_Menus

./: .gitignore  application.hpp  cross-mingw.txt  menubar.hpp  meson.build  readme.md  test_main.cpp  window.hpp  window_base.hpp
gtk/: application.hpp  sfml_widget.cpp  sfml_widget.hpp  window-gtk.cpp  window_impl-gtk.cpp  window_impl-gtk.hpp
win32/: window-win32.cpp  window_impl-win32.cpp  window_impl-win32.hpp
